[tool.poetry]
name = "image-denoising-autoencoder"
version = "0.1.0"
description = ""
authors = ["Sehed.Girsi <sehed.girsi@virginmediao2.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tensorflow = "^2.17.0"
numpy = "^1.23"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
jupyter = "^1.0.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
